--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "short-uuid": "^4.2.0",
     "styled-components": "^5.3.5"
   }
 }
